# rustown

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: map.txt
client/: Cargo.toml
client/resources/: display_config.ron
client/resources/config/: input.ron  settings.ron
client/resources/sprites/: sheet.ron
client/src/: bundle.rs  components.rs  config.rs  events.rs  main.rs  resource.rs  sound.rs  state.rs  states.rs  systems.rs  util.rs
client/src/components/: markers.rs  mod.rs  player.rs
client/src/states/: mod.rs  pause.rs  play.rs
client/src/systems/: actor_health.rs  actor_movement.rs  camera.rs  control.rs  mod.rs  movement.rs  ui.rs  util.rs  world.rs
client/src/systems/actor/: control.rs  health.rs  mod.rs  movement.rs
client/src/systems/render/: actor.rs  mod.rs  world.rs
client/src/systems/world/: gen.rs
src/: main.rs
src/rustown/: animation.rs  game.rs  map.rs  mod.rs  sound.rs
