[package]
edition = "2021"
name = "rustown"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5.0", features = ["bevy_gltf", "bevy_winit", "render", "png", "wayland", "dynamic", "trace", "filesystem_watcher"], default-features = false}
bevy_kira_audio = {version = "0.6.0", features = ["mp3"]}
bluenoise = "0.2.1"
rand = "0.8.4"
rand_pcg = "0.3.1"

[patch.crates-io]
bevy = {git = "https://github.com/bevyengine/bevy.git", branch = "main"}
bevy_kira_audio = {path = "../bevy_kira_audio"}
# notify = "5.0.0-pre.13"
# syn = "1.0.82"
